Bug 477286 - "Thumbnail Grid" tab switcher inaccessible with Orca on X and Wayland sessions
Summary: "Thumbnail Grid" tab switcher inaccessible with Orca on X and Wayland sessions
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: tabbox (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: accessibility, qt6
Depends on:
Blocks:
 
Reported: 2023-11-20 14:29 UTC by Harley Richardson
Modified: 2024-02-15 00:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harley Richardson 2023-11-20 14:29:22 UTC
SUMMARY

STEPS TO REPRODUCE
1. Start orca
2. Open up some windows.
3. Hold alt, and press tab to navigate through the windows. Orca will say frame when the switcher is opened, and occasionally may start saying the title of a window before it interrupts itself and says frame, again only when first opening.
4. Orca will not read any of the focused windows in the list when navigating to them.

OBSERVED RESULT
Window switching is inaccessible.

EXPECTED RESULT
Windows to be announced by Orca when navigating through them in the switcher.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0

ADDITIONAL INFORMATION
I am using the kde-unstable arch repo to test plasma 6 out.
Comment 1 Fushan Wen 2023-11-28 01:04:37 UTC
A workaroud for now is to not use the default grid task switcher. The sidebar task switcher works as expected.
Comment 2 Nate Graham 2023-11-29 16:22:37 UTC
Ah, that's a good data point, thanks.
Comment 3 Bug Janitor Service 2023-12-01 13:30:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4738
Comment 4 Bug Janitor Service 2024-01-25 15:50:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1039
Comment 5 Fushan Wen 2024-01-25 23:55:49 UTC
Git commit 49c92cf3db7eded639ae08b9e0ad7f44d35f34ac by Fushan Wen.
Committed on 25/01/2024 at 16:49.
Pushed by fusionfuture into branch 'master'.

plasmaquick/dialog: make main item focus scope

The main item should be a focus scope like the root item in
QtQuick.Window, so the focus chain can be properly propagated.

See https://github.com/qt/qtdeclarative/blob/93864a29b7dfa138350942b490380766ee78242a/src/quick/items/qquickwindow.cpp#L763
FIXED-IN: 6.0

M  +1    -0    src/plasmaquick/dialog.cpp

https://invent.kde.org/plasma/libplasma/-/commit/49c92cf3db7eded639ae08b9e0ad7f44d35f34ac
Comment 6 Fushan Wen 2024-01-25 23:58:39 UTC
Git commit 31652d4f3f74a277964107d21807c89d712345c3 by Fushan Wen.
Committed on 26/01/2024 at 00:56.
Pushed by fusionfuture into branch 'Plasma/6.0'.

plasmaquick/dialog: make main item focus scope

The main item should be a focus scope like the root item in
QtQuick.Window, so the focus chain can be properly propagated.

See https://github.com/qt/qtdeclarative/blob/93864a29b7dfa138350942b490380766ee78242a/src/quick/items/qquickwindow.cpp#L763
FIXED-IN: 6.0


(cherry picked from commit 49c92cf3db7eded639ae08b9e0ad7f44d35f34ac)

M  +1    -0    src/plasmaquick/dialog.cpp

https://invent.kde.org/plasma/libplasma/-/commit/31652d4f3f74a277964107d21807c89d712345c3
Comment 7 Vlad Zahorodnii 2024-01-29 08:50:11 UTC
Git commit 75b08a8fd963b39f2abf85ae2bb0587e735f180c by Vlad Zahorodnii, on behalf of Fushan Wen.
Committed on 29/01/2024 at 08:36.
Pushed by vladz into branch 'master'.

tabbox/switchers/thumbnail_grid: use FocusScope as main item

By default the focus item in a tabbox is always the main item, so if the
main item is not a focus scope, the inner item will not get focused.
FIXED-IN: 6.0

M  +1    -1    src/tabbox/switchers/thumbnail_grid/contents/ui/main.qml

https://invent.kde.org/plasma/kwin/-/commit/75b08a8fd963b39f2abf85ae2bb0587e735f180c
Comment 8 Vlad Zahorodnii 2024-01-29 08:51:10 UTC
Git commit be9bd4caea252fea9b75659744e6901838dc78cf by Vlad Zahorodnii, on behalf of Fushan Wen.
Committed on 29/01/2024 at 08:50.
Pushed by vladz into branch 'Plasma/6.0'.

tabbox/switchers/thumbnail_grid: use FocusScope as main item

By default the focus item in a tabbox is always the main item, so if the
main item is not a focus scope, the inner item will not get focused.
FIXED-IN: 6.0


(cherry picked from commit 75b08a8fd963b39f2abf85ae2bb0587e735f180c)

M  +1    -1    src/tabbox/switchers/thumbnail_grid/contents/ui/main.qml

https://invent.kde.org/plasma/kwin/-/commit/be9bd4caea252fea9b75659744e6901838dc78cf
Comment 9 Fushan Wen 2024-02-15 00:40:38 UTC
Git commit b046b9924c88f669465ef6c187ca98c421e7f5a2 by Fushan Wen.
Committed on 15/02/2024 at 00:40.
Pushed by fusionfuture into branch 'master'.

Revert "plasmaquick/dialog: make main item focus scope"

Fixes "QQuickItem: Cannot set FocusScope once item has children and is in a window."

This doesn't affect the bug as it's already fixed in the tabbox itself.

This reverts commit 49c92cf3db7eded639ae08b9e0ad7f44d35f34ac

M  +0    -1    src/plasmaquick/dialog.cpp

https://invent.kde.org/plasma/libplasma/-/commit/b046b9924c88f669465ef6c187ca98c421e7f5a2
Comment 10 Bug Janitor Service 2024-02-15 00:45:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1059
Comment 11 Fushan Wen 2024-02-15 00:47:03 UTC
Git commit 6af560c8a2dc4259c61e19b672ba591f9287488b by Fushan Wen.
Committed on 15/02/2024 at 00:45.
Pushed by fusionfuture into branch 'Plasma/6.0'.

Revert "plasmaquick/dialog: make main item focus scope"

Fixes "QQuickItem: Cannot set FocusScope once item has children and is in a window."

This doesn't affect the bug as it's already fixed in the tabbox itself.

This reverts commit 49c92cf3db7eded639ae08b9e0ad7f44d35f34ac


(cherry picked from commit b046b9924c88f669465ef6c187ca98c421e7f5a2)

M  +0    -1    src/plasmaquick/dialog.cpp

https://invent.kde.org/plasma/libplasma/-/commit/6af560c8a2dc4259c61e19b672ba591f9287488b