plasmaquick/dialog: make main item focus scope

The main item should be a focus scope like the root item in
QtQuick.Window, so the focus chain can be properly propagated.

See https://github.com/qt/qtdeclarative/blob/93864a29b7dfa138350942b490380766ee78242a/src/quick/items/qquickwindow.cpp#L763

BUG: 477286
FIXED-IN: 6.0


(cherry picked from commit 49c92cf3db7eded639ae08b9e0ad7f44d35f34ac)