src/plasmaquick/dialog.cpp
@@ -1008,6 +1008,7 @@ void Dialog::setMainItem(QQuickItem *mainItem)
 
         if (mainItem) {
             mainItem->setParentItem(contentItem());
+            mainItem->setFlag(QQuickItem::ItemIsFocusScope, true);
 
             connect(mainItem, SIGNAL(widthChanged()), this, SLOT(slotMainItemSizeChanged()));
             connect(mainItem, SIGNAL(heightChanged()), this, SLOT(slotMainItemSizeChanged()));
